# process-runner

./: .gitignore  Cargo.toml  docker-compose.yml  dockerfile  msfProcessManager.js  package.json  server.js
process-runner/: Cargo.toml  auxiliaries.json  auxiliary.json  output.txt  payloads.json
process-runner/src/: main.rs
src/: main.rs  test.rs
