[package]
name = "create-options-json"
version = "0.1.0"
edition = "2021"

[dependencies]
strip-ansi-escapes = "0.2.0"
colored = "2.2.0"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.0"
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
log = "0.4.22"
env_logger = "0.11.5"